--- a/src/App.css
+++ b/src/App.css
@@ -42,6 +42,11 @@
   margin: auto 2em;
 }
 
+.card-character{
+  display: flex;
+  justify-content: center;
+}
+
 .read-the-docs {
   color: #888;
 }
