--- a/src/index.css
+++ b/src/index.css
@@ -24,11 +24,11 @@ a:hover {
 }
 
 body {
-  margin: 0;
+  margin: 8rem auto;
   display: flex;
   place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
+  /* min-width: 320px;
+  min-height: 100vh; */
 }
 
 h1 {
