--- a/src/pages/episodesTemp.css
+++ b/src/pages/episodesTemp.css
@@ -4,8 +4,8 @@ body {
   justify-content: center; */
 }
 
-.list-box {
-  /* margin: 8rem auto; */
+.buttons-episode-box {
+  margin: 8rem auto;
 }
 
 .episode-list {
