--- a/src/css/locationPage.css
+++ b/src/css/locationPage.css
@@ -1,7 +1,20 @@
-.button-location-box {
-    display: flex;
+.location-box {
+  max-width: 1280px;
+  margin: 0 auto;
+  padding: 2rem;
+  text-align: center;
+  margin: 8rem auto;
+}
+
+.buttons-location-box {
+  display: flex;
+  margin: 2rem;
 }
 
 .location-id {
-    margin: auto 2em;
+  margin: auto 2em;
+}
+
+.location-button {
+  background-color: #4caf50!important;
 }
